--- a/Ebook/OPS/book/table-of-contents.html
+++ b/Ebook/OPS/book/table-of-contents.html
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version='1.0'?>
 <html xmlns='http://www.w3.org/1999/xhtml' xmlns:epub='http://www.idpf.org/2007/ops' xml:lang='en' lang='en'>
 	<head>
 		<meta charset='utf-8' />
@@ -13,8 +13,8 @@
 			<ol>
 				<li><a href='content.html#p1'>Part 1</a>
 					<ol>
-						<li><a href='content.html#p1-c1'>Chapter 1</a></li>
-						<li><a href='content.html#p1-c2'>Chapter 2</a></li>
+						<li><a href='content.html#p1.c1'>Chapter 1</a></li>
+						<li><a href='content.html#p1.c2'>Chapter 2</a></li>
 					</ol>
 				</li>
 			</ol>
