--- a/Ebook/OPS/book/cover.html
+++ b/Ebook/OPS/book/cover.html
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version='1.0'?>
 <html xmlns='http://www.w3.org/1999/xhtml' xmlns:epub='http://www.idpf.org/2007/ops' xml:lang='en' lang='en'>
   <head>
 		<meta charset='utf-8' />
