Add .ncx file for EPUB 2.0 backward-compatibility
Also changed the book cover from .jpg to .png because it didn't validate and .png is generally better for screens.

Also changed extensions from .html to .xhtml.

--- a/ebook/OPS/book/cover.xhtml
+++ b/ebook/OPS/book/cover.xhtml
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-      <img id='cover-image' alt='Book Cover' src='../images/cover.jpg'/>
+      <img id='cover-image' alt='Book Cover' src='../images/cover.png'/>
 
   </body>
 </html>
