--- a/ebook/OPS/book/table-of-contents.xhtml
+++ b/ebook/OPS/book/table-of-contents.xhtml
@@ -11,10 +11,10 @@
 			<h1>Table of Contents</h1>
 
 			<ol>
-				<li><a href='content.html#p1'>Part 1</a>
+				<li><a href='content.xhtml#p1'>Part 1</a>
 					<ol>
-						<li><a href='content.html#p1.c1'>Chapter 1</a></li>
-						<li><a href='content.html#p1.c2'>Chapter 2</a></li>
+						<li><a href='content.xhtml#p1.c1'>Chapter 1</a></li>
+						<li><a href='content.xhtml#p1.c2'>Chapter 2</a></li>
 					</ol>
 				</li>
 			</ol>
